add `reset()` and `setAsPristine()` methods

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "cap32",
   "license": "MIT",
   "dependencies": {
+    "array-find": "^1.0.0",
     "empty-functions": "^1.0.2",
     "hoist-non-react-statics": "^1.2.0"
   },
