--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   "license": "MIT",
   "dependencies": {
     "array-find": "^1.0.0",
-    "empty-functions": "^1.0.2",
     "hoist-non-react-statics": "^1.2.0"
+  },
+  "peerDependencies": {
+    "fbjs": "^0.8.0",
+    "react": "^15.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
@@ -50,6 +53,7 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^5.0.1",
+    "fbjs": "^0.8.11",
     "jsdom": "^9.11.0",
     "lodash.camelcase": "^4.3.0",
     "mkdirp": "^0.5.1",
