--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run build:cjs && npm run build:es && npm run build:umd && npm run build:min",
     "start": "npm test -- -w",
     "test": "cross-env BABEL_ENV=cjs mocha --compilers js:babel-register ./test",
-    "prepublish": "npm run test && npm run build"
+    "preversion": "npm run test && npm run build"
   },
   "files": [
     "README.md",
@@ -28,10 +28,11 @@
   "license": "MIT",
   "dependencies": {
     "array-find": "^1.0.0",
-    "hoist-non-react-statics": "^1.2.0"
+    "empty-functions": "^1.0.2",
+    "hoist-non-react-statics": "^1.2.0",
+    "warning": "^3.0.0"
   },
   "peerDependencies": {
-    "fbjs": "^0.8.0",
     "react": "^15.0.0"
   },
   "devDependencies": {
@@ -53,7 +54,6 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^5.0.1",
-    "fbjs": "^0.8.11",
     "jsdom": "^9.11.0",
     "lodash.camelcase": "^4.3.0",
     "mkdirp": "^0.5.1",
