--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "warning": "^3.0.0"
   },
   "peerDependencies": {
-    "react": "^15.0.0"
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
