--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build:es": "cross-env BABEL_ENV=es babel src -d es",
     "build:umd": "cross-env NODE_ENV=production webpack",
     "build:min": "cross-env NODE_ENV=production webpack --env.minify",
-    "build": "npm run build:cjs && npm run build:es && npm run build:umd && npm run build:min",
-    "start": "npm test -- -w",
-    "test": "cross-env BABEL_ENV=cjs mocha --compilers js:babel-register ./test",
-    "preversion": "npm run test && npm run build"
+    "build": "yarn build:cjs && yarn build:es && yarn build:umd && yarn build:min",
+    "start": "npm test -- --watchAll",
+    "test": "cross-env BABEL_ENV=cjs jest",
+    "preversion": "yarn test && yarn build"
   },
   "files": [
     "README.md",
@@ -36,32 +36,51 @@
     "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-system-import-transformer": "^2.4.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.16.3",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^19.0.0",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-import": "^1.1.1",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-system-import-transformer": "^3.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-destructuring": "^6.19.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-es2015-parameters": "^6.18.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^3.1.3",
     "enzyme": "^2.7.1",
     "eslint": "^3.8.1",
-    "eslint-import-resolver-webpack": "^0.8.0",
-    "eslint-loader": "^1.6.0",
-    "eslint-plugin-babel": "^3.3.0",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^5.0.1",
+    "eslint-plugin-jest": "^19.0.1",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-standard": "^3.0.1",
+    "jest": "^19.0.2",
     "jsdom": "^9.11.0",
     "lodash.camelcase": "^4.3.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.1.2",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "rimraf": "^2.5.4",
     "webpack": "v2.2.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ],
+    "modulePathIgnorePatterns": [
+      "node_modules",
+      "lib"
+    ]
   }
 }
