--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "warning": "^3.0.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0",
+    "prop-types": "^15.5.0 || ^16.0.0-0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -54,7 +55,6 @@
     "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^3.1.3",
     "enzyme": "^2.7.1",
-    "eslint": "^3.8.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-import-resolver-webpack": "^0.8.1",
