--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "array-find": "^1.0.0",
     "empty-functions": "^1.0.2",
     "hoist-non-react-statics": "^1.2.0",
+    "prop-types": "^15.5.7",
     "warning": "^3.0.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0",
-    "prop-types": "^15.5.0 || ^16.0.0-0"
+    "react": "^0.14.9 || ^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
