--- a/.babelrc
+++ b/.babelrc
@@ -3,17 +3,26 @@
 		"react",
 		"stage-0",
 	],
+	"plugins": [
+		"transform-decorators-legacy",
+	],
 	"env": {
 		"cjs": {
 			"presets": [
 				"es2015",
 				"stage-0",
-			]
+			],
+			"plugins": [
+				"transform-decorators-legacy",
+			],
 		},
 		"es": {
 			"presets": [
 				["es2015", { "modules": false }],
 				"stage-0",
+			],
+			"plugins": [
+				"transform-decorators-legacy",
 			],
 		},
 	}
