--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^3.1.3",
+    "delay": "^2.0.0",
     "enzyme": "^2.7.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
