--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jest": "^19.0.2",
     "jsdom": "^9.11.0",
     "lodash.camelcase": "^4.3.0",
+    "lodash.padstart": "^4.6.1",
     "mkdirp": "^0.5.1",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
