--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.1",
     "babel-jest": "^19.0.0",
     "babel-loader": "^7.0.0",
     "babel-plugin-import": "^1.1.1",
@@ -58,20 +58,14 @@
     "cross-env": "^3.1.3",
     "delay": "^2.0.0",
     "enzyme": "^2.7.1",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.0.1",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint": "^4.15.0",
+    "eslint-config-cantonjs": "^0.0.0",
     "jest": "^19.0.2",
     "jsdom": "^9.11.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.padstart": "^4.6.1",
     "mkdirp": "^0.5.1",
+    "prettier-eslint-cli": "^4.7.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
